clang/test/BSC/Negative/Generic/SymbolBeforeTemplate/symbol_do_not_crash3.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// TODO: improve the error message
***t<int N>();
// expected-warning@-1{{type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int}}
